# ULTRABALLOONDB

./: .gitignore  COPYRIGHT  FOUNDATION_MANIFEST.txt  README.md
docs/: ADR_0001_DB_AGENT_BOUNDARY.md  ADR_0002_ORIGINAL_TOPOLOGICAL_WAVE_CORE.md  ADR_0003_CRYSTALLIZATION_PATHS.md  ADR_0004_EDGE_TYPE_RELATION_ALGEBRA.md  ADR_0005_FLOATING_SUBGRAPHS.md  BENCHMARK_BASELINE_FROM_BALLOONDB_V00S.md  CORE_ALIGNMENT_GUARD.md  FUTURE_APPLICATIONS_AFTER_CORE_ANALYSIS.md  PROVENANCE_AND_LICENSE_STATUS.md  ROADMAP_ALIGNMENT_TABLE.md  ULTRABALLOONDB_V00A_ARCHITECTURE.md  ULTRABALLOONDB_V00A_TEST_PLAN.md  V00B_WAVE_ACTIVATION_CORE.md  V00C_EDGE_ATTENUATION_TABLE.md  V00D_TOPK_BATCH_PAYLOAD_FETCH.md  V00E_EDGE_TYPE_RELATION_ALGEBRA.md  V00F_CRYSTALLIZATION_PATHS.md  V00G_HOT_SNAPSHOT_ARCHIVE_SPLIT.md  V00H_FLOATING_SUBGRAPH_EXPORT_IMPORT.md  V00I2_COLD_IO_AND_TRAVERSAL_SPLIT_AUDIT.md  V00I3_DECODE_CHECKSUM_HOTPATH_SPLIT.md  V00I_PAGE_SIZE_BENCHMARK.md  V00J1_G1G2_RULE_EXCEPTION_RECONSTRUCTION_CORE.md  V00J2_G1G2_QUERYABLE_RECONSTRUCTION_INDEX.md  V00J3_G1G2_MUTATION_DELTA_PATCH.md  V00J4_G1G2_FAMILY_MODEL_PACK.md  V00J5A_G1G2_SMALL_DATA_ADAPTIVE_PACK.md  V00J5_G1G2_REAL_FILE_FAMILY_INTAKE.md  V00J6_G1G2_PATCH_CHAIN_COMPACTION.md  V00J7_G1G2_HOT_PATCH_EXPORT_IMPORT.md  V00J_COMPACT_COMPUTABLE_HOT_LAYOUT.md  V00L_REAL_HOT_WAVE_SUBGRAPH_BINDING.md  V00M_UNIFIED_L0_L7_DATABASE_RUNTIME.md  V00N_DURABLE_WRITES_WAL_CRASH_RECOVERY.md  V00O_STABLE_DATABASE_API_CLI_TRANSPORT.md  V00P1_CSR_MMAP_CORE_HOTPATH_BINDING.md  V00P2_DATABASE_BENCHMARK_CSR_MMAP_INTEGRATION.md  V00P3_WINDOWS_RAM_AND_NETWORK_METRICS_FINALIZATION.md  V00Q1_WSL2_NATIVE_LINUX_RUNTIME_VALIDATION.md  V00R1_RUST_NATIVE_CSR_MMAP_WAVE_CORE_CANDIDATE.md  (+4 more)
docs/alignment/: V00J5A_G1G2_SMALL_DATA_ADAPTIVE_PACK.json  V00J6_G1G2_PATCH_CHAIN_COMPACTION.json  (+41 more)
python/: ultraballoondb_native.pyi
rust_native/: Cargo.toml
rust_native/.cargo/: config.toml
rust_native/ultraballoondb-backup/: Cargo.toml
rust_native/ultraballoondb-backup/examples/: backup_restore_upgrade_dry_run_probe.rs
rust_native/ultraballoondb-backup/src/: lib.rs
rust_native/ultraballoondb-cabi/: Cargo.toml
rust_native/ultraballoondb-cabi/include/: ultraballoondb.h
rust_native/ultraballoondb-cabi/src/: lib.rs
rust_native/ultraballoondb-cli/: Cargo.toml
rust_native/ultraballoondb-cli/src/: lib.rs  main.rs
rust_native/ultraballoondb-compat/: Cargo.toml
rust_native/ultraballoondb-compat/examples/: crash_format_compat_probe.rs
rust_native/ultraballoondb-compat/src/: lib.rs
rust_native/ultraballoondb-core/: Cargo.toml
rust_native/ultraballoondb-core/src/: lib.rs
rust_native/ultraballoondb-daemon/: Cargo.toml
rust_native/ultraballoondb-daemon/examples/: daemon_protocol_probe.rs
rust_native/ultraballoondb-daemon/src/: lib.rs
rust_native/ultraballoondb-hybrid-engine/: Cargo.toml
rust_native/ultraballoondb-hybrid-engine/examples/: product_hybrid_engine_v1_probe.rs
rust_native/ultraballoondb-hybrid-engine/src/: lib.rs
rust_native/ultraballoondb-lifecycle/: Cargo.toml
rust_native/ultraballoondb-lifecycle/examples/: r4_1b_snapshot_inventory_probe.rs  transaction_core_probe.rs  wal_checkpoint_recovery_probe.rs
rust_native/ultraballoondb-lifecycle/src/: durable.rs  lib.rs  snapshot_inventory.rs
rust_native/ultraballoondb-migrate/: Cargo.toml
rust_native/ultraballoondb-migrate/examples/: python_v00n_migration_probe.rs
rust_native/ultraballoondb-migrate/src/: lib.rs
rust_native/ultraballoondb-observability-security/: Cargo.toml
rust_native/ultraballoondb-observability-security/examples/: observability_security_probe.rs
rust_native/ultraballoondb-observability-security/src/: lib.rs
rust_native/ultraballoondb-provenance/: Cargo.toml
rust_native/ultraballoondb-provenance/examples/: provenance_core_probe.rs
rust_native/ultraballoondb-provenance/src/: lib.rs
rust_native/ultraballoondb-pyo3/: Cargo.toml
rust_native/ultraballoondb-pyo3/src/: lib.rs
rust_native/ultraballoondb-semantic/: Cargo.toml
rust_native/ultraballoondb-semantic/examples/: cpu_gpu_router_v1_probe.rs  gpu_router_cached_cpu_policy_probe.rs  semantic_hybrid_v1_probe.rs  vector_store_v1_probe.rs
rust_native/ultraballoondb-semantic/src/: gpu_router.rs  hybrid.rs  lib.rs
rust_native/ultraballoondb-storage/: Cargo.toml
rust_native/ultraballoondb-storage/examples/: storage_v1_probe.rs
rust_native/ultraballoondb-storage/src/: lib.rs
rust_native/ultraballoondb-trust/: Cargo.toml
rust_native/ultraballoondb-trust-asymmetric/: Cargo.toml
rust_native/ultraballoondb-trust-asymmetric/examples/: asymmetric_software_cng_probe.rs
rust_native/ultraballoondb-trust-asymmetric/src/: cli.rs  cng.rs  ledger.rs  lib.rs  main.rs  provider.rs  registry.rs
rust_native/ultraballoondb-trust-auth/: Cargo.toml
rust_native/ultraballoondb-trust-auth/examples/: trust_authorization_cli_probe.rs  trust_governance_audit_probe.rs
rust_native/ultraballoondb-trust-auth/src/: audit.rs  cli.rs  crypto.rs  governance.rs  ledger.rs  lib.rs  main.rs
rust_native/ultraballoondb-trust-commit/: Cargo.toml
rust_native/ultraballoondb-trust-commit/examples/: trust_record_binding_cocommit_probe.rs
rust_native/ultraballoondb-trust-commit/src/: lib.rs
rust_native/ultraballoondb-trust-enterprise/: Cargo.toml
rust_native/ultraballoondb-trust-enterprise/examples/: trust_enterprise_approval_audit_probe.rs
rust_native/ultraballoondb-trust-enterprise/src/: approval.rs  audit.rs  cli.rs  crypto.rs  lib.rs  main.rs  profile.rs
rust_native/ultraballoondb-trust-federation/: Cargo.toml
rust_native/ultraballoondb-trust-federation/examples/: provider_federation_probe.rs
rust_native/ultraballoondb-trust-federation/src/: lib.rs
rust_native/ultraballoondb-trust/examples/: trust_transition_ledger_probe.rs
rust_native/ultraballoondb-trust/src/: lib.rs
rust_native/ultraballoondb-wal/: Cargo.toml
rust_native/ultraballoondb-wal/src/: lib.rs
rust_native/ultraballoondb_rust_core/: Cargo.toml
rust_native/ultraballoondb_rust_core/src/: main.rs
specs/: API_V00A.md  STORAGE_V00A.md
(+325 files in other folders)
