[workspace]
resolver = "2"
members = [
    "ultraballoondb-core",
    "ultraballoondb-storage",
    "ultraballoondb_rust_core",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
publish = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
