[workspace]
resolver = "2"
members = [
    "ultraballoondb-daemon",
    "ultraballoondb-backup",
    "ultraballoondb-cli",
    "ultraballoondb-compat",
    "ultraballoondb-core",
    "ultraballoondb-lifecycle",
    "ultraballoondb-migrate",
    "ultraballoondb-provenance",
    "ultraballoondb-storage",
    "ultraballoondb-trust",
    "ultraballoondb-trust-commit",
    "ultraballoondb-trust-auth",
    "ultraballoondb-trust-enterprise",
    "ultraballoondb-trust-asymmetric",
    "ultraballoondb-trust-federation",
    "ultraballoondb-wal",
    "ultraballoondb_rust_core",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
publish = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
