[package]
name = "ultraballoondb-backup"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UltraBalloonDB offline verified backup, staged restore and upgrade dry-run core"

[dependencies]
ultraballoondb-storage = { path = "../ultraballoondb-storage" }

[lib]
name = "ultraballoondb_backup"
path = "src/lib.rs"

[[example]]
name = "backup_restore_upgrade_dry_run_probe"
path = "examples/backup_restore_upgrade_dry_run_probe.rs"
