[package]
name = "ultraballoondb-cabi"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UltraBalloonDB stable versioned C ABI over the bounded D2 protocol core"

[dependencies]
ultraballoondb-daemon = { path = "../ultraballoondb-daemon" }

[lib]
name = "ultraballoondb_cabi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]
