[package]
name = "ultraballoondb-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UltraBalloonDB Native Edition A offline database command surface"

[dependencies]
ultraballoondb-lifecycle = { path = "../ultraballoondb-lifecycle" }
ultraballoondb-storage = { path = "../ultraballoondb-storage" }

[lib]
name = "ultraballoondb_cli"
path = "src/lib.rs"

[[bin]]
name = "ultraballoondb"
path = "src/main.rs"
