[package]
name = "ultraballoondb-daemon"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UltraBalloonDB bounded local daemon and deterministic binary protocol core"

[dependencies]
ultraballoondb-storage = { path = "../ultraballoondb-storage" }

[lib]
name = "ultraballoondb_daemon"
path = "src/lib.rs"

[[example]]
name = "daemon_protocol_probe"
path = "examples/daemon_protocol_probe.rs"
