[package]
name = "ultraballoondb-lifecycle"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UltraBalloonDB deterministic write batch and single-writer transaction core"

[dependencies]
ultraballoondb-storage = { path = "../ultraballoondb-storage" }

[lib]
name = "ultraballoondb_lifecycle"
path = "src/lib.rs"

[[example]]
name = "transaction_core_probe"
path = "examples/transaction_core_probe.rs"
