[package]
name = "ultraballoondb-lifecycle"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UltraBalloonDB deterministic transaction, WAL, checkpoint and recovery lifecycle"

[dependencies]
ultraballoondb-storage = { path = "../ultraballoondb-storage" }
ultraballoondb-wal = { path = "../ultraballoondb-wal" }

[lib]
name = "ultraballoondb_lifecycle"
path = "src/lib.rs"

[[example]]
name = "transaction_core_probe"
path = "examples/transaction_core_probe.rs"

[[example]]
name = "wal_checkpoint_recovery_probe"
path = "examples/wal_checkpoint_recovery_probe.rs"
