[package]
name = "ultraballoondb-migrate"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Offline Python V00N to canonical Rust migration parity bridge"

[dependencies]
ultraballoondb-lifecycle = { path = "../ultraballoondb-lifecycle" }
ultraballoondb-storage = { path = "../ultraballoondb-storage" }

[lib]
name = "ultraballoondb_migrate"
path = "src/lib.rs"

[[example]]
name = "python_v00n_migration_probe"
path = "examples/python_v00n_migration_probe.rs"
