[package]
name = "ultraballoondb-storage"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Canonical UltraBalloonDB Storage Format V1 page-store and integrity core"

[lib]
name = "ultraballoondb_storage"
path = "src/lib.rs"

[[example]]
name = "storage_v1_probe"
path = "examples/storage_v1_probe.rs"
