[package]
name = "ultraballoondb-trust-auth"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Offline HMAC authorization, key registry and trust CLI"

[dependencies]
ultraballoondb-lifecycle = { path = "../ultraballoondb-lifecycle" }
ultraballoondb-storage = { path = "../ultraballoondb-storage" }
ultraballoondb-trust = { path = "../ultraballoondb-trust" }
ultraballoondb-trust-commit = { path = "../ultraballoondb-trust-commit" }

[lib]
name = "ultraballoondb_trust_auth"
path = "src/lib.rs"

[[bin]]
name = "ultraballoondb-trust"
path = "src/main.rs"

[[example]]
name = "trust_authorization_cli_probe"
path = "examples/trust_authorization_cli_probe.rs"
