[package]
name = "ultraballoondb-wal"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UltraBalloonDB WAL Format V1 append, fsync, scan and tail repair"

[dependencies]
ultraballoondb-storage = { path = "../ultraballoondb-storage" }

[lib]
name = "ultraballoondb_wal"
path = "src/lib.rs"
