[package]
name = "ultraballoondb_rust_core"
version = "0.0.2"
edition = "2021"
publish = false
description = "UltraBalloonDB native Rust CSR/mmap runtime binding core"

[[bin]]
name = "ultraballoondb_rust_core"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
