[package]
name = "ultraballoondb_rust_core"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "UltraBalloonDB compatibility binary using the shared canonical Rust core"

[[bin]]
name = "ultraballoondb_rust_core"
path = "src/main.rs"

[dependencies]
ultraballoondb-core = { path = "../ultraballoondb-core" }
